objects/Subscriber__c.object
<CustomObject>
    <description>Object use for subscribing a case or account</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscribers</relationshipLabel>
        <relationshipName>Subscribers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Subscribers</relationshipLabel>
        <relationshipName>Subscribers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserAccount__c</fullName>
        <description>Field Contain Account name of User&apos;s</description>
        <formula>User__r.Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Add user to  subscribe case or account.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Subscribers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Subscriber</label>
    <nameField>
        <displayFormat>SUB{00000000}</displayFormat>
        <label>Subscriber Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscribers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>